--- a/BBManagerService/BBManagerService.csproj
+++ b/BBManagerService/BBManagerService.csproj
@@ -59,6 +59,7 @@
     <Compile Include="BBManagerServiceInstaller.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="ManagerMessageSchema.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
